--- a/grocery-shop.html
+++ b/grocery-shop.html
@@ -489,7 +489,7 @@
                         <h3>Grocery Shop</h3>
 
                     </div>
-                    
+
                 </div>
                 <div class="carausel-10-columns-cover position-relative ">
                     <div class="carausel-10-columns slick-initialized slick-slider " id="carausel-10-columns">
@@ -552,12 +552,49 @@
                         </div>
                     </div>
                 </div>
-                </div>
+            </div>
         </section>
 
 
 
-
+        <section class="banners mb-25">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="banner-img">
+                            <img src="assets/imgs/banner/banner-1.png" alt="">
+                            <div class="banner-text">
+                                <h4>
+                                Cooking Essential<br>
+                                    Products
+                                </h4>
+                                <a href="shop-grid-right.html" class="btn btn-xs">Shop Now <i class="fi-rs-arrow-small-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="banner-img">
+                            <img src="assets/imgs/banner/banner-2.png" alt="">
+                            <div class="banner-text">
+                                <h4>
+                             Packaged Food
+                                </h4>
+                                <a href="shop-grid-right.html" class="btn btn-xs">Shop Now <i class="fi-rs-arrow-small-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="banner-img mb-sm-0">
+                            <img src="assets/imgs/banner/banner-3.png" alt="">
+                            <div class="banner-text">
+                                <h4>The best Organic <br>Products Online</h4>
+                                <a href="shop-grid-right.html" class="btn btn-xs">Shop Now <i class="fi-rs-arrow-small-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
@@ -565,7 +602,7 @@
         <section class="section-padding mb-30">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-3 col-lg-4 col-md-6 mb-sm-5 mb-md-0">
+                    <div class="col-xl-2 col-lg-4 col-md-6 mb-sm-5 mb-md-0">
                         <h4 class="section-title style-1 mb-30 animated animated">Cooking Essential</h4>
                         <div class="product-list-small animated animated">
                             <article class="row align-items-center hover-up">
@@ -621,7 +658,7 @@
                             </article>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 mb-md-0">
+                    <div class="col-xl-2 col-lg-4 col-md-6 mb-md-0">
                         <h4 class="section-title style-1 mb-30 animated animated">Packaged Food</h4>
                         <div class="product-list-small animated animated">
                             <article class="row align-items-center hover-up">
@@ -677,7 +714,7 @@
                             </article>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 mb-sm-5 mb-md-0 d-none d-lg-block">
+                    <div class="col-xl-2 col-lg-4 col-md-6 mb-sm-5 mb-md-0 d-none d-lg-block">
                         <h4 class="section-title style-1 mb-30 animated animated">Household Supplies</h4>
                         <div class="product-list-small animated animated">
                             <article class="row align-items-center hover-up">
@@ -733,8 +770,65 @@
                             </article>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-6 mb-sm-5 mb-md-0 d-none d-xl-block">
+                    <div class="col-xl-2 col-lg-4 col-md-6 mb-sm-5 mb-md-0 d-none d-xl-block">
                         <h4 class="section-title style-1 mb-30 animated animated">Beauty & Personal Care</h4>
+                        <div class="product-list-small animated animated">
+                            <article class="row align-items-center hover-up">
+                                <figure class="col-md-4 mb-0">
+                                    <a href="shop-product-right.html"><img src="assets/imgs/shop/thumbnail-10.jpg" alt=""></a>
+                                </figure>
+                                <div class="col-md-8 mb-0">
+                                    <h6>
+                                        <a href="shop-product-right.html">Foster Farms Takeout Crispy Classic Buffalo Wings</a>
+                                    </h6>
+                                    <div class="product-rate-cover">
+                                        <div class="product-rate d-inline-block">
+                                            <div class="product-rating" style="width: 90%"></div>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                            </article>
+                            <article class="row align-items-center hover-up">
+                                <figure class="col-md-4 mb-0">
+                                    <a href="shop-product-right.html"><img src="assets/imgs/shop/thumbnail-11.jpg" alt=""></a>
+                                </figure>
+                                <div class="col-md-8 mb-0">
+                                    <h6>
+                                        <a href="shop-product-right.html">Angie’s Boomchickapop Sweet &amp; Salty Kettle Corn</a>
+                                    </h6>
+                                    <div class="product-rate-cover">
+                                        <div class="product-rate d-inline-block">
+                                            <div class="product-rating" style="width: 90%"></div>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                            </article>
+                            <article class="row align-items-center hover-up">
+                                <figure class="col-md-4 mb-0">
+                                    <a href="shop-product-right.html"><img src="assets/imgs/shop/thumbnail-12.jpg" alt=""></a>
+                                </figure>
+                                <div class="col-md-8 mb-0">
+                                    <h6>
+                                        <a href="shop-product-right.html">All Natural Italian-Style Chicken Meatballs</a>
+                                    </h6>
+                                    <div class="product-rate-cover">
+                                        <div class="product-rate d-inline-block">
+                                            <div class="product-rating" style="width: 90%"></div>
+                                        </div>
+
+                                    </div>
+
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-2 col-lg-4 col-md-6 mb-sm-5 mb-md-0 d-none d-xl-block">
+                        <h4 class="section-title style-1 mb-30 animated animated">Baby Products</h4>
                         <div class="product-list-small animated animated">
                             <article class="row align-items-center hover-up">
                                 <figure class="col-md-4 mb-0">
